--- a/index.html
+++ b/index.html
@@ -358,18 +358,20 @@
 			div_first_obj.id = "make_order"
 			div_first_obj.setAttribute("class", "tab_form");
 			cnt.appendChild(div_first_obj);
-			var div_second_obj = document.createElement( "div" );
+			var div_second_one_obj = document.createElement( "div" );
+			var div_second_two_obj = document.createElement( "div" );
 			var div_three_obj = document.createElement( "div" );
-			div_second_obj.setAttribute("class", "text_field");
+			div_second_one_obj.setAttribute("class", "text_field");
+			div_second_two_obj.setAttribute("class", "text_field");
 			div_three_obj.setAttribute("class", "text_field");
 			var serial_num = Date.now().toString(16).toUpperCase();
 			var data_str = '<label for="part_serial_num_out">制令號 : </label><input type=text id="part_serial_num_out" class="part_attr input_container normal_font" style="width:200px;margin-top:15px" name="part_make_order" disabled="true" value=' + serial_num + ' >';
-			div_second_obj.innerHTML = data_str;
-			div_first_obj.appendChild(div_second_obj);
+			div_second_one_obj.innerHTML = data_str;
+			div_first_obj.appendChild(div_second_one_obj);
 			div_three_obj.setAttribute("id", "mo_part_num");
 			var data_str = '<label for="part_num_in">品號 : </label><input id="part_num_in" class="input_container part_list_style normal_font" name="part_num_list" list="part_list"/>';
 			div_three_obj.innerHTML = data_str;
-			div_second_obj.appendChild(div_three_obj);
+			div_second_one_obj.appendChild(div_three_obj);
 			div_three_obj.setAttribute("id", "mo_part_table");
 			table_title = [ '料號', '名稱', '需求量', '提供量' ];
 			var title_len = table_title.length;
@@ -402,11 +404,12 @@
 			thead_obj.appendChild( tr_obj );
 			table_obj.appendChild( thead_obj );
 			div_three_obj.appendChild( table_obj );
-			div_second_obj.appendChild(div_three_obj);
+			div_second_one_obj.appendChild(div_three_obj);
 			var data_str = '<button type="button" class="btn btn-primary btn_field" onclick="allow_make_order()" >確認</button>';
 			data_str += '<button type="button" class="btn btn-primary btn_field" onclick="cancel_make_order()" >取消</button>';
-			div_second_obj.innerHTML = data_str;
-			div_first_obj.appendChild(div_second_obj);
+			div_second_two_obj.innerHTML = data_str;
+			div_first_obj.appendChild(div_second_one_obj);
+			div_first_obj.appendChild(div_second_two_obj);
 		}
 
 	
