--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 			div_three_obj.setAttribute("id", "mo_part_num");
 			var data_str = '<label for="part_num_in">品號 : </label><input id="part_num_in" class="input_container part_list_style normal_font" name="part_num_list" list="part_list"/>';
 			data_str += '<br><label for="part_variable_in">數量 : </label><input id="part_variable_in" class="part_attr input_container normal_font" name="part_varval" type="number" style="width:100px" value="0" />';
-			data_str += '<button type="button" class="btn btn-primary btn_field" onclick="build_mo_table()" >產生</button>';
+			data_str += '<button type="button" class="btn btn-primary btn_field" onclick="build_make_order_table()" >產生</button>';
 			div_three_obj.innerHTML = data_str;
 			div_second_one_obj.appendChild(div_three_obj);
 			div_three_obj.setAttribute("id", "mo_part_table");
@@ -433,8 +433,11 @@
 			$('#show_make_order').show();
 		}
 		
-		
-		
+		// Build Make Order Table
+		function build_make_order_table(){
+			
+			
+		}
 		
 		// quantity change button response
 		function quan_change_btn( currdata ){
