--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								<div class="col-auto">
 									<button type="button" class="btn btn-primary" onclick='append_btn_res()' >新增</button>
 									<button type="button" class="btn btn-primary" onclick='send_new_product()' >上傳</button>
-									<label for="part_totalcost_out">總成本 :</label><input type=text id="part_totalcost_out" class="align_right part_attr input_container normal_font" style="width:200px;margin-top:15px" name="part_totalcost" disabled="true" value="0" >
+									<label class="align_right" for="part_totalcost_out">總成本 :</label><input type=text id="part_totalcost_out" class="part_attr input_container normal_font" style="width:200px;margin-top:15px" name="part_totalcost" disabled="true" value="0" >
 								</div>
 							</div>
 							<table id="product_table_add"
