--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 					</table>
 				</div>
 				<div id="menu7" class="tab-pane fade">
-					<div>
+					<div class="btn_field">
 						<div class="col-auto">
 							<button type="button" class="btn btn-primary" onclick="supplier_search()" >查詢頁面</button>
 							<button type="button" class="btn btn-primary" onclick="supplier_revise()" >修改頁面</button>
