--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
 						receive_record();
 						break;
 					case "廠商":
-						$("#supplier_search_page").hide;
-						$("#supplier_revise_page").show;
+						$("#supplier_search_page").hide();
+						$("#supplier_revise_page").show();
 						product_table = $("#supplier_table");
 						ele_id = "menu7";
 						break;
