--- a/index.html
+++ b/index.html
@@ -356,6 +356,20 @@
 			});
 		});
 		
+		
+		
+		function supplier_revise(){
+			$("#supplier_search_page").hide();
+			$("#supplier_revise_page").show();
+		}
+		
+		function supplier_search(){
+			$("#supplier_search_page").show();
+			$("#supplier_revise_page").hide();
+		}
+		
+		
+		
 		// quantity change button response
 		function quan_change_btn( currdata ){
 			var cnt = document.getElementById( ele_id );
