--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
 					<div id="supplier_revise_page">
 						<div class= "tab_form">
 							<div class="text_field">
-								<label for="part_supplier_in">廠商名稱 :</label><input id="part_supplier_in" class="part_attr input_container normal_font" name="part_supplier" type="text" style="width:300px" value="辛耘" />
-								<br><label for="part_contact_in">聯絡人 :</label><input id="part_contact_in" class="part_attr input_container normal_font" name="part_contact" type="text" style="width:300px" value="Jacky" />
+								<label for="part_supplier_in">廠商名稱 :</label><input id="part_supplier_in" class="part_attr input_container normal_font" name="part_supplier" type="text" style="width:300px" placeholder="辛耘" />
+								<br><label for="part_contact_in">聯絡人 :</label><input id="part_contact_in" class="part_attr input_container normal_font" name="part_contact" type="text" style="width:300px" placeholder="Jacky" />
 								<br><label for="part_phone_in">電話 :</label><input id="part_phone_in" class="part_attr input_container normal_font" name="part_phone" type="text" style="width:300px" placeholder="(03)598-6199 Ext.5553" />
 								<br><label for="part_address_in">地址 :</label><input id="part_address_in" class="part_attr input_container normal_font" name="part_address" type="text" style="width:300px" placeholder="湖口" />
 								<br><label for="part_url_in">網址 :</label><input id="part_url_in" class="part_attr input_container normal_font" name="part_url" type="text" style="width:300px" placeholder="http://my.scientech.com.tw/" />
