--- a/index.html
+++ b/index.html
@@ -357,12 +357,13 @@
 		});
 		
 		
-		
+		// supplier revise page
 		function supplier_revise(){
 			$("#supplier_search_page").hide();
 			$("#supplier_revise_page").show();
 		}
 		
+		// supplier search page
 		function supplier_search(){
 			$("#supplier_search_page").show();
 			$("#supplier_revise_page").hide();
