--- a/index.html
+++ b/index.html
@@ -234,13 +234,13 @@
 				<div id="menu7" class="tab-pane fade">
 					<div class="btn_field">
 						<div class="col-auto">
-							<button type="button" class="btn btn-primary" onclick="supplier_search()" >查詢頁面</button>
-							<button type="button" class="btn btn-primary" onclick="supplier_revise()" >修改頁面</button>
+							<button type="button" class="btn btn-primary" onclick="supplier_search_btn()" >查詢頁面</button>
+							<button type="button" class="btn btn-primary" onclick="supplier_revise_btn()" >修改頁面</button>
 						</div>
 					</div>
 					<div id="supplier_search_page">
 						<div id="supplier_toolbar">
-							<button type="button" class="btn btn-primary" onclick="supplier_delete()" >刪除</button>
+							<button type="button" class="btn btn-primary" onclick="supplier_delete_btn()" >刪除</button>
 						</div>
 						<table id="supplier_table"
 							data-toggle="table"
@@ -273,12 +273,15 @@
 					<div id="supplier_revise_page">
 						<div class= "tab_form">
 							<div class="text_field">
-								<label for="part_supplier_in">品號 :</label><input id="part_supplier_in" class="part_attr input_container supplier_list_style normal_font" name="part_supplier" list="supplier_list" />
+								<label for="part_supplier_in">廠商 :</label><input id="part_supplier_in" class="part_attr input_container supplier_list_style normal_font" name="part_supplier" list="supplier_list" onchange="supplier_change_btn( this.value )" />
 								<br><label for="part_contact_in">聯絡人 :</label><input id="part_contact_in" class="part_attr input_container normal_font" name="part_contact" type="text" style="width:300px" placeholder="Jacky" />
 								<br><label for="part_phone_in">電話 :</label><input id="part_phone_in" class="part_attr input_container normal_font" name="part_phone" type="text" style="width:300px" placeholder="(03)598-6199 Ext.5553" />
 								<br><label for="part_address_in">地址 :</label><input id="part_address_in" class="part_attr input_container normal_font" name="part_address" type="text" style="width:300px" placeholder="湖口" />
 								<br><label for="part_url_in">網址 :</label><input id="part_url_in" class="part_attr input_container normal_font" name="part_url" type="text" style="width:300px" placeholder="http://my.scientech.com.tw/" />
 							</div>
+						</div>
+						<div>
+							<button type="button" class="btn btn-primary" onclick="supplier_info_upload()" >上傳</button>
 						</div>
 					</div>
 				</div>
@@ -293,9 +296,6 @@
 		var part_list_options = "";
 		var supplier_list_obj = $("#supplier_list");
 		var supplier_list_options = "";
-		
-		
-		
 		var bom_node_array = new Array();
 
 		
@@ -363,16 +363,22 @@
 		});
 		
 		
-		// supplier revise page
-		function supplier_revise(){
+		// supplier revise button
+		function supplier_revise_btn(){
 			$("#supplier_search_page").hide();
 			$("#supplier_revise_page").show();
 		}
 		
-		// supplier search page
-		function supplier_search(){
+		// supplier search button
+		function supplier_search_btn(){
 			$("#supplier_search_page").show();
 			$("#supplier_revise_page").hide();
+		}
+		
+		function supplier_change_btn( currdata ){
+			alert( currdata );
+			receive_supplier_info('supplier_info', currdata )
+			receive_db_supplierlist();
 		}
 		
 		
