--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
 			if( currdata == "" ){
 				return;
 			}
+			alert( currdata )
 			receive_supplier_info('supplier_info', currdata )
 			receive_db_supplierlist();
 		}
