--- a/index.html
+++ b/index.html
@@ -972,6 +972,7 @@
 									exportDataType: "all"
 								});
 							case "get_record_data":
+							case "get_all_supplier_info":
 								product_table.bootstrapTable('removeAll');
 								product_table.bootstrapTable('load', response);
 								product_table.bootstrapTable('selectPage', '1');
