--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 						$("#supplier_revise_page").hide();
 						product_table = $("#supplier_table");
 						ele_id = "menu7";
-						receive_supplier_info();
+						receive_all_supplier_info();
 						break;
 					default:
 				}
@@ -374,7 +374,7 @@
 		function supplier_search_btn(){
 			$("#supplier_search_page").show();
 			$("#supplier_revise_page").hide();
-			receive_supplier_info();
+			receive_all_supplier_info();
 		}
 		
 		// supplier change name
