--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
 									exportDataType: "all"
 								});
 							case "get_record_data":
-							case "get_all_supplier_info":
+							case "get_supplier_list":
 								alert( response[0] );
 								product_table.bootstrapTable('removeAll');
 								product_table.bootstrapTable('load', response);
