--- a/index.html
+++ b/index.html
@@ -258,14 +258,11 @@
 							<thead>
 								<tr>
 									<th data-field="state" data-checkbox="true"></th>
-									<th data-field="index">項次</th>
-									<th data-field="timestamp">時間</th>
-									<th data-field="number">品號</th>
-									<th data-field="name">品名</th>
-									<th data-field="action">行為</th>
-									<th data-field="quantity">數量</th>
-									<th data-field="goal">目的</th>
-									<th data-field="location">位置</th>
+									<th data-field="supplier">廠商名稱</th>
+									<th data-field="contact">聯絡人</th>
+									<th data-field="phone">電話</th>
+									<th data-field="address">地址</th>
+									<th data-field="url">網址</th>
 								</tr>
 							</thead>
 						</table>
