--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@
 				alert( "請輸入廠商名稱" );
 				return false;
 			}
+			alert( attr.supplier );
+			alert( attr.url );
 			attr.state = "replace_supplier";
 			send_to_db( attr );
 		}
