--- a/index.html
+++ b/index.html
@@ -1024,6 +1024,8 @@
 									resolve( true );
 									break;
 								}
+								
+								alert( response );
 								var cnt = document.getElementById( ele_id );
 								var var_val = cnt.getElementsByClassName("part_attr");
 								for (var i=0; i<var_val.length; i++){
