--- a/index.html
+++ b/index.html
@@ -1409,9 +1409,10 @@
 							receive_to_db(attr);
 							break;
 						case "replace_supplier":
-							receive_supplier_info('get_supplier_info', data.supplier );
+							receive_supplier_info('get_supplier_info',  );
 							receive_db_supplier_name();
 							alert("修改完成");
+							alert(data.supplier);
 							break;
 						case "rem_record_data":
 							receive_record();
